--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
     <footer class="rodape">
-        <img src="img/logo.png" alt="Alura+" class="rodape__logo">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
         <ul class="rodape__lista">
             <li>
                 <a href="#" class="lista__link">Idioma</a>
